--- a/index.html
+++ b/index.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Task List 2021</title>
 
-  <head>
+	<link rel="stylesheet" href="main.css" />
+</head>
+<body>
 
-    <meta charset="UTF-8">
-    <title>To Do List</title>
-    <link rel="stylesheet" href="main.css">
+	<header>
+		<h1>Task List 2021</h1>
+		<form id="new-task-form">
+			<input
+				type="text"
+				name="new-task-input"
+				id="new-task-input"
+				placeholder="What do you have planned?" />
+			<input
+				type="submit"
+				id="new-task-submit"
+				value="Add task" />
+		</form>
+	</header>
+	<main>
+		<section class="task-list">
+			<h2>Tasks</h2>
 
-  </head>
-  <body>
+			<div id="tasks">
 
-    <header>
-      <h1>To do List</h1>
-      <form id="new-task-form"></form>
-        <input
-          type="text"
-          id="new-task-input"
-          placeholder="Add an item to your To Do List">
-        <input
-          type="submit"
-          id="new-task-submit"
-          value="Add task">
-    </header>
+				<!-- <div class="task">
+					<div class="content">
+						<input
+							type="text"
+							class="text"
+							value="A new task"
+							readonly>
+					</div>
+					<div class="actions">
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</div>
+				</div> -->
 
-    <main class="task-list">
-      <h2>Tasks</h2>
+			</div>
+		</section>
+	</main>
 
-              <!-- All tasks go in here, need id to target this in javascript to add the class -->
-      <div id="tasks">
-        <div id="task">
-          <div class="content">
-            <input
-              type="text"
-              class="text"
-              value="My shiny task"
-              readonly>
-              <!-- Readonly means we can't edit this -->
-          </div>
-          <div class="actions">
-            <button class="edit">Edit</button>
-            <button class="delete">Delete</button>
-          </div>
-        </div>
-      </div>
-
-    </main>
-
-    <script src="main.js"> </script>
-
-  </body>
-
+	<script src="main.js"></script>
+</body>
 </html>
