--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           id="new-task-input"
           placeholder="What do you have planned?"
         />
-        <input type="submit" id="new-task-submit" value="Add task" />
+        <input type="submit" id="new-task-submit" value="Add Task" />
       </form>
     </header>
 
